@@ -1,6 +1,7 @@
 package com.t_horie.tf2puml.application.domain.service;
 
-import com.t_horie.tf2puml.application.domain.model.AwsPlantUml;
+import com.t_horie.tf2puml.application.domain.model.AwsPumlResource;
+import com.t_horie.tf2puml.application.domain.model.AwsTfResource;
 import com.t_horie.tf2puml.application.domain.service.parser.TerraPumlVisitor;
 import com.t_horie.tf2puml.application.port.in.GeneratePlantUmlUseCase;
 import com.t_horie.tf2puml.application.service.parser.TerraformLexer;
@@ -13,10 +14,7 @@ import org.springframework.stereotype.Component;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Component
@@ -45,10 +43,10 @@ public class PlantUmlGenerator implements GeneratePlantUmlUseCase {
         }
 
         /*
-         * ファイルを読み込み、AWSリソースを取得する
+         * tfファイルを読み込み、AWSリソースを取得する
          */
         var tfFiles = path.isFile() ? List.of(path) : FileUtils.listFiles(path, new String[]{"tf"}, false);
-        List<AwsPlantUml> awsPlantUmls = tfFiles.stream()
+        List<AwsTfResource> awsTfResources = tfFiles.stream()
                 .flatMap(file -> {
                     try (FileInputStream is = new FileInputStream(file)) {
                         var lexer = new TerraformLexer(CharStreams.fromStream(is));
@@ -57,28 +55,36 @@ public class PlantUmlGenerator implements GeneratePlantUmlUseCase {
                         var tree = parser.file_();
                         var visitor = new TerraPumlVisitor();
                         visitor.visit(tree);
-                        return visitor.getAwsPlantUmls().stream();
+                        return visitor.getAwsTfResources().stream();
                     } catch (IOException e) {
                         throw new RuntimeException(e);
                     }
                 })
-                .sorted(new Comparator<AwsPlantUml>() {
+                .sorted(new Comparator<AwsTfResource>() {
                     @Override
-                    public int compare(AwsPlantUml o1, AwsPlantUml o2) {
+                    public int compare(AwsTfResource o1, AwsTfResource o2) {
                         return o1.getAlias().compareTo(o2.getAlias());
                     }
                 })
-                .collect(Collectors.toList());
+                .toList();
+
+        /*
+         * pumlモデルに変換する
+         */
+        List<AwsPumlResource> awsPumlResources = awsTfResources.stream()
+                .map(AwsPumlResource::fromTfResource)
+                .toList();
+        List<AwsPumlResource> graph = generateGraph(awsPumlResources);
 
         /*
          * PlantUMLのテキストを生成する
          */
         var sb = new StringBuilder();
         appendStart(sb);
-        appendHeader(sb, awsPlantUmls.stream()
-                .map(AwsPlantUml::getResourceType)
-                .collect(Collectors.toSet()));
-        appendResource(sb, awsPlantUmls);
+        appendHeaders(sb, awsPumlResources.stream()
+                .map(AwsPumlResource::getHeaderFile)
+                .collect(Collectors.toCollection(TreeSet::new)));
+        appendResources(sb, graph, 0);
         if (layoutPath.isPresent()) {
             sb.append(FileUtils.readFileToString(layoutPath.get(), "UTF-8"));
         }
@@ -87,109 +93,23 @@ public class PlantUmlGenerator implements GeneratePlantUmlUseCase {
         return sb.toString();
     }
 
-    public void appendHeader(StringBuilder sb, Set<String> resourceTypes) {
+    public void appendHeaders(StringBuilder sb, Set<String> headerFiles) {
         sb.append("!include <awslib/AWSCommon>\n");
 
-        for (var resourceType : resourceTypes) {
-            // see https://github.com/awslabs/aws-icons-for-plantuml/blob/main/AWSSymbols.md for include directive.
-            switch (resourceType) {
-                case "aws_instance":
-                    sb.append("!include <awslib/Compute/EC2>\n");
-                    break;
-                case "aws_internet_gateway":
-                    sb.append("!include <awslib/NetworkingContentDelivery/VPCInternetGateway>\n");
-                    break;
-                case "aws_lb":
-                    sb.append("!include <awslib/NetworkingContentDelivery/ElasticLoadBalancing>\n");
-                    break;
-                case "aws_nat_gateway":
-                    sb.append("!include <awslib/NetworkingContentDelivery/VPCNATGateway>\n");
-                    break;
-                case "aws_s3_bucket":
-                    sb.append("!include <awslib/Storage/SimpleStorageService>\n");
-                    break;
-                case "aws_subnet":
-                    sb.append("!include <awslib/Groups/PublicSubnet>\n");
-                    break;
-                case "aws_vpc":
-                    sb.append("!include <awslib/Groups/VPC>\n");
-                    break;
-
-            }
+        for (var headerFile : headerFiles) {
+            sb.append("!include %s\n".formatted(headerFile));
         }
     }
 
-    public void appendResource(StringBuilder sb, List<AwsPlantUml> awsPlantUmls) {
-        for (var awsPlantUml : awsPlantUmls) {
-            switch (awsPlantUml.getResourceType()) {
-                case "aws_instance":
-                    sb.append("EC2(%s, \"%s\", \"%s\"".formatted(
-                            awsPlantUml.getAlias(),
-                            awsPlantUml.getLabel(),
-                            awsPlantUml.getTf2pumlTechnology()));
-                    if (!awsPlantUml.getDescription().isEmpty()) {
-                        sb.append(", \"%s\"".formatted(awsPlantUml.getDescription()));
-                    }
-                    sb.append(")\n");
-                    break;
-                case "aws_internet_gateway":
-                    sb.append("VPCInternetGateway(%s, \"%s\", \"%s\"".formatted(
-                            awsPlantUml.getAlias(),
-                            awsPlantUml.getLabel(),
-                            awsPlantUml.getTf2pumlTechnology()));
-                    if (!awsPlantUml.getDescription().isEmpty()) {
-                        sb.append(", \"%s\"".formatted(awsPlantUml.getDescription()));
-                    }
-                    sb.append(")\n");
-                    break;
-                case "aws_lb":
-                    sb.append("ElasticLoadBalancing(%s, \"%s\", \"%s\"".formatted(
-                            awsPlantUml.getAlias(),
-                            awsPlantUml.getLabel(),
-                            awsPlantUml.getTf2pumlTechnology()));
-                    if (!awsPlantUml.getDescription().isEmpty()) {
-                        sb.append(", \"%s\"".formatted(awsPlantUml.getDescription()));
-                    }
-                    sb.append(")\n");
-                    break;
-                case "aws_nat_gateway":
-                    sb.append("VPCNATGateway(%s, \"%s\", \"%s\"".formatted(
-                            awsPlantUml.getAlias(),
-                            awsPlantUml.getLabel(),
-                            awsPlantUml.getTf2pumlTechnology()));
-                    if (!awsPlantUml.getDescription().isEmpty()) {
-                        sb.append(", \"%s\"".formatted(awsPlantUml.getDescription()));
-                    }
-                    sb.append(")\n");
-                    break;
-                case "aws_s3_bucket":
-                    sb.append("SimpleStorageService(%s, \"%s\", \"%s\"".formatted(
-                            awsPlantUml.getAlias(),
-                            awsPlantUml.getLabel(),
-                            awsPlantUml.getTf2pumlTechnology()));
-                    if (!awsPlantUml.getDescription().isEmpty()) {
-                        sb.append(", \"%s\"".formatted(awsPlantUml.getDescription()));
-                    }
-                    sb.append(")\n");
-                    break;
-                case "aws_subnet":
-                    sb.append("PublicSubnetGroup(%s, \"%s\"".formatted(
-                            awsPlantUml.getAlias(),
-                            awsPlantUml.getLabel()));
-                    if (!awsPlantUml.getDescription().isEmpty()) {
-                        sb.append(", \"%s\"".formatted(awsPlantUml.getDescription()));
-                    }
-                    sb.append(")\n");
-                    break;
-                case "aws_vpc":
-                    sb.append("VPCGroup(%s, \"%s\"".formatted(
-                            awsPlantUml.getAlias(),
-                            awsPlantUml.getLabel()));
-                    if (!awsPlantUml.getDescription().isEmpty()) {
-                        sb.append(", \"%s\"".formatted(awsPlantUml.getDescription()));
-                    }
-                    sb.append(")\n");
-                    break;
+    public void appendResources(StringBuilder sb, List<AwsPumlResource> awsPumlResources, int depth) {
+        for (var awsPumlResource : awsPumlResources) {
+            sb.append("  ".repeat(depth)).append(awsPumlResource.getIconString());
+            if (!awsPumlResource.getChildren().isEmpty()) {
+                sb.append(" {\n");
+                appendResources(sb, awsPumlResource.getChildren(), depth + 1);
+                sb.append("  ".repeat(depth)).append("}\n");
+            } else {
+                sb.append("\n");
             }
         }
     }
@@ -200,5 +120,22 @@ public class PlantUmlGenerator implements GeneratePlantUmlUseCase {
 
     private void appendEnd(StringBuilder sb) {
         sb.append("@enduml\n");
+    }
+
+    private List<AwsPumlResource> generateGraph(List<AwsPumlResource> awsPumlResources) {
+        var awsPumlResourceMap = awsPumlResources.stream()
+                .collect(Collectors.toMap(AwsPumlResource::getAlias, resource -> resource));
+
+        List<AwsPumlResource> rootResources = new ArrayList<>();
+        for (var resource : awsPumlResources) {
+            if (resource.getParent().isEmpty()) {
+                rootResources.add(resource);
+            } else {
+                var parent = awsPumlResourceMap.get(resource.getParent().get());
+                parent.getChildren().add(resource);
+            }
+        }
+
+        return rootResources;
     }
 }
